Migrate users of Optional.get()
Upgraded modernizer is flagging these users, migrate them to better
alternatives. Since we require Java 17, also convert switches on enum
to switch expressions.

Change-Id: Iffea317aedce4e2e6660217b2a9d4fd277f9c451
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>
(cherry picked from commit 38f326861531f68cb5aa48cc2b1fbdcc2d75885c)